Fix header spacing

--- a/p2_cs2300/css/stylesheet.css
+++ b/p2_cs2300/css/stylesheet.css
@@ -37,7 +37,8 @@ ul {
 	margin: 0 auto ;
 	width: 60%;
 	display: flex;
-	padding: 0;
+	padding: 70px 0 0 0;
+
 }
 
 .title-tags {
@@ -59,7 +60,7 @@ ul {
 }
 
 #header h2 {
-	margin: 0 auto;
+	margin: -20px auto 0 auto;
 	font-size: 50px;
 	font-weight: normal;
 	text-align: center;
